# lili-v0

./: pyproject.toml
lili/: __main__.py
